@@ -1,7 +1,7 @@
 // qsamplerAbout.h
 //
 /****************************************************************************
-   Copyright (C) 2004-2013, rncbc aka Rui Nuno Capela. All rights reserved.
+   Copyright (C) 2004-2014, rncbc aka Rui Nuno Capela. All rights reserved.
 
    This program is free software; you can redistribute it and/or
    modify it under the terms of the GNU General Public License
@@ -29,7 +29,7 @@
 
 #define QSAMPLER_SUBTITLE     "A LinuxSampler Qt GUI Interface"
 #define QSAMPLER_WEBSITE      "http://qsampler.sourceforge.net"
-#define QSAMPLER_COPYRIGHT    "Copyright (C) 2004-2013, rncbc aka Rui Nuno Capela. All rights reserved."
+#define QSAMPLER_COPYRIGHT    "Copyright (C) 2004-2014, rncbc aka Rui Nuno Capela. All rights reserved."
 #define QSAMPLER_COPYRIGHT2   "Copyright (C) 2007, Christian Schoenebeck"
 
 #define QSAMPLER_DOMAIN       "linuxsampler.org"
