@@ -3,6 +3,12 @@ Qsampler - A LinuxSampler Qt GUI Interface
 
 ChangeLog
 
+SVN TRUNK
+
+* Added support for SF2 instrument names/preset enumeration.
+  (EXPERIMENTAL)
+
+
 0.2.3  2013-12-31  A fifth of a Jubilee.
 
 * Allow the build system to include an user specified LDFLAGS.
